# eww-utils

./: Cargo.toml  README.md
eww_utils/: Cargo.toml
eww_utils/src/: eww_helpers.rs  hyprland_utils.rs  lib.rs
eww_utils/src/eww_helpers/: get_active_window_info.rs  get_network_info.rs  get_workspace_info_list.rs  move_workspace.rs  set_volume.rs
eww_utils_cli/: Cargo.toml
eww_utils_cli/src/: main.rs
src/: eww_helpers.rs  main.rs
src/eww_helpers/: get_battery_info.rs  get_network_info.rs  move_workspace.rs
