[package]
name = "eww-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
battery = "0.7.8"
clap = { version = "4.4.4", features = ["derive"] }
regex = "1.9.5"
serde_json = "1.0.107"
sysinfo = { version = "0.29.10", features = ["serde"] }
